# AI-ML-Python

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
src/my_python_project/: pandas_vectorization_demo.py  refactored_functions.py
tests/: test_example.py  test_pandas_vectorization_demo.py  test_refactored_functions.py
